--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
     <hr>
     <h1 style="color:darkblue">Services </h1>
     <p>
+        <b>※  </b><a href="https://conf.researchr.org/track/fse-2024/fse-2024-research-papers/">FSE 2024</a> Reviewer
+    </p>
+    <p>
         <b>※  </b><a href="https://conf.researchr.org/track/internetware-2023/internetware-2023-papers/">Internetware 2023</a> Reviewer
     </p>
     <p>
@@ -260,6 +263,9 @@
 
     <hr>
     <h1 style="color:darkblue">Awards and Honors</h1>
+    <p>
+        <b>★  </b>First-class Doctoral Execellence Scholarship of Nanjing University, 2023
+    </p> 
     <p>
         <b>★  </b>Excellent Postgraduate of Nanjing University, 2022
     </p>
@@ -295,7 +301,7 @@
     </p>
 
     <p>
-        Last updated at Aug/11/2023.
+        Last updated at Oct/27/2023.
     </p>
     <table class="MsoNormalTable" border="0" cellpadding="0"
 		width="100%"
