--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
     <hr>
     <h1 style="color:darkblue">Services </h1>
     <p>
+        <b>※  </b><a href="https://conf.researchr.org/home/CC-2024/">CC 2024</a> Reviewer
+    </p>
+    <p>
         <b>※  </b><a href="https://conf.researchr.org/track/fse-2024/fse-2024-research-papers/">FSE 2024</a> Reviewer
     </p>
     <p>
@@ -253,7 +256,7 @@
         <b>※  </b><a href="https://pldi22.sigplan.org/">PLDI 2022</a> Reviewer
     </p>
     <p>
-        <b>※  </b><a href="http://www.jos.org.cn/jos/home">Journal Of Software</a> Sub reviewer
+        <b>※  </b><a href="http://www.jos.org.cn/jos/home">Journal Of Software</a>  <a href="http://www.jos.org.cn/jos/news/view/20231116114042001">Reviewer</a>
     </p>
     <p>
         <b>※  </b><a href="http://chinasoft.ccf.org.cn/">ChinaSoft 2021</a> Reviewer
