--- a/index.html
+++ b/index.html
@@ -274,6 +274,9 @@
     <hr>
     <h1 style="color:darkblue">Awards and Honors</h1>
     <p>
+        <b>★  </b>First-class Postgraduate Academic Scholarship, 2023
+    </p>
+    <p>
         <b>★  </b>First-class Doctoral Execellence Scholarship of Nanjing University, 2023
     </p> 
     <p>
@@ -311,7 +314,7 @@
     </p>
 
     <p>
-        Last updated at Oct/27/2023.
+        Last updated at Dec/1/2023.
     </p>
     <table class="MsoNormalTable" border="0" cellpadding="0"
 		width="100%"
