--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
     <hr>
     <h1 style="color:darkblue">Services </h1>
     <p>
+        <b>※  </b><a href="https://pldi24.sigplan.org/track/pldi-2024-papers/">PLDI 2024</a> Reviewer
+    </p>
+    <p>
         <b>※  </b><a href="https://conf.researchr.org/home/CC-2024/">CC 2024</a> Reviewer
     </p>
     <p>
@@ -317,7 +320,7 @@
     </p>
 
     <p>
-        Last updated at Dec/13/2023.
+        Last updated at Dec/15/2023.
     </p>
     <table class="MsoNormalTable" border="0" cellpadding="0"
 		width="100%"
