--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <b>※  </b><a href="https://conf.researchr.org/track/icse-2024/icse-2024-SRC/">ICSE 2024 SRC</a> Reviewer
     </p>
     <p>
-        <b>※  </b><a href="https://pldi24.sigplan.org/">PLDI 2024</a> Artifact Evaluation Committee (AEC)
+        <b>※  </b><a href="https://pldi24.sigplan.org/">PLDI 2024</a> Artifact Evaluation Committee (<a href="https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee">AEC</a>)
     </p>
     <p>
         <b>※  </b><a href="https://pldi24.sigplan.org/track/pldi-2024-papers/">PLDI 2024</a> Reviewer
@@ -328,7 +328,7 @@
     </p>
 
     <p>
-        Last updated at Jan/10/2024.
+        Last updated at Jan/16/2024.
     </p>
     <table class="MsoNormalTable" border="0" cellpadding="0"
 		width="100%"
