--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@
     <h1 style="color:darkblue"><span style="font-family:Times New Roman">Publications </span></h1>
     
     <p class="MsoNormal"><span style="font-size:15px"><span style="font-family:Times New Roman">
+    <b>▶ HardTaint: Production-Run Dynamic Taint Analysis via Selective Hardware Tracing</b>  
+    <br> By <u><b>Yiyu Zhang</b></u>, Tianyi Liu, Yueyang Wang, Yun Qi, Kai Ji, Jian Tang, Xiaoliang Wang, Xuandong Li, and Zhiqiang Zuo
+    <br> In arXiv
+    [<a href="https://arxiv.org/abs/2402.17241">PDF</a>]</span></span></p>
+         
+
+    <p class="MsoNormal"><span style="font-size:15px"><span style="font-family:Times New Roman">
     <b>▶ BigDataflow: A Distributed Interprocedural Dataflow Analysis Framework</b>  
     <br> By Zewen Sun, Duanchen Xu, <u><b>Yiyu Zhang</b></u>, Yun Qi, Yueyang Wang, Zhiqiang Zuo, Zhaokang Wang, Yue Li, Xuandong Li, Qingda Lu, Wenwen Peng, and Shengjian Guo.
     <br> In Proceedings of ACM SIGSOFT Symposium on the Foundation of Software Engineering (<font color="#ff0000"><strong>FSE'23</strong></font>), California, U.S., Dec 3-9, 2023.
@@ -328,7 +335,7 @@
     </p>
 
     <p>
-        Last updated at Jan/16/2024.
+        Last updated at Feb/28/2024.
     </p>
     <table class="MsoNormalTable" border="0" cellpadding="0"
 		width="100%"
