--- a/index.html
+++ b/index.html
@@ -240,52 +240,30 @@
 
     <hr>
     <h1 style="color:darkblue">Services </h1>
-    <p>
-        <b>※  </b><a href="https://conf.researchr.org/track/icse-2024/icse-2024-SRC/">ICSE 2024 SRC</a> Reviewer
-    </p>
-    <p>
-        <b>※  </b><a href="https://pldi24.sigplan.org/">PLDI 2024</a> Artifact Evaluation Committee (<a href="https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee">AEC</a>)
-    </p>
-    <p>
-        <b>※  </b><a href="https://pldi24.sigplan.org/track/pldi-2024-papers/">PLDI 2024</a> Reviewer
-    </p>
-    <p>
-        <b>※  </b><a href="https://conf.researchr.org/home/CC-2024/">CC 2024</a> Reviewer
-    </p>
-    <p>
-        <b>※  </b><a href="https://conf.researchr.org/track/fse-2024/fse-2024-research-papers/">FSE 2024</a> Reviewer
-    </p>
-    <p>
-        <b>※  </b><a href="http://chinasoft.ccf.org.cn/">ChinaSoft 2023</a> Program Committee (PC)
-    </p>
-    <p>
-        <b>※  </b><a href="https://conf.researchr.org/track/internetware-2023/internetware-2023-papers/">Internetware 2023</a> Reviewer
-    </p>
-    <p>
-        <b>※  </b><a href="https://conf.researchr.org/track/ase-2023/ase-2023-papers/">ASE 2023</a> Reviewer
-    </p>
-    <p>
-        <b>※  </b><a href="https://conf.researchr.org/home/issta-2022">ISSTA 2022</a> Artifact Evaluation Committee (<a href="https://conf.researchr.org/committee/issta-2022/issta-2022-artifact-evaluation-artifact-evaluation-committee">AEC</a>)
-    </p>
-    <p>
-        <b>※  </b><a href="https://2022.esec-fse.org/">ESEC/FSE 2022</a> Reviewer
-    </p>
-    <p>
-        <b>※  </b><a href="https://pldi22.sigplan.org/">PLDI 2022</a> Reviewer
-    </p>
-    <p>
-        <b>※  </b><a href="http://www.jos.org.cn/jos/home">Journal Of Software</a>  <a href="http://www.jos.org.cn/jos/news/view/20231116114042001">Reviewer</a>
-    </p>
-    <p>
-        <b>※  </b><a href="http://chinasoft.ccf.org.cn/">ChinaSoft 2021</a> Reviewer
-    </p>
-    <p>
-        <b>※  </b>Teaching Assistant:  <strong><em>Advanced Programming in C++</em></strong> in Semester 1, 2020/2021
-    </p>
-    <p>
-        <b>※  </b>Teaching Assistant:  <strong><em>Advanced Programming in C++</em></strong> in Semester 1, 2019/2020
-        
-    </p>
+    <pre><b>※ </b>Program Committee:
+        • <a href="https://pldi24.sigplan.org/">PLDI 2024</a> Artifact Evaluation Committee (<a href="https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee">AEC</a>)
+        • <a href="https://conf.researchr.org/home/issta-2022">ISSTA 2022</a> Artifact Evaluation Committee (<a href="https://conf.researchr.org/committee/issta-2022/issta-2022-artifact-evaluation-artifact-evaluation-committee">AEC</a>)
+    </pre>
+    <pre><b>※ </b>Reviewer:  
+        • <a href="https://2024.splashcon.org/track/splash-2024-oopsla/">OOPSLA 2024</a>
+        • <a href="https://conf.researchr.org/track/icse-2024/icse-2024-SRC/">ICSE 2024 SRC</a>
+        • <a href="https://pldi24.sigplan.org/track/pldi-2024-papers/">PLDI 2024</a>
+        • <a href="https://conf.researchr.org/home/CC-2024/">CC 2024</a>
+        • <a href="https://conf.researchr.org/track/fse-2024/fse-2024-research-papers/">FSE 2024</a>
+        • <a href="http://chinasoft.ccf.org.cn/">ChinaSoft 2023</a>
+        • <a href="https://conf.researchr.org/track/internetware-2023/internetware-2023-papers/">Internetware 2023</a>
+        • <a href="https://conf.researchr.org/track/ase-2023/ase-2023-papers/">ASE 2023</a>
+        • <a href="https://2022.esec-fse.org/">ESEC/FSE 2022</a>
+        • <a href="https://pldi22.sigplan.org/">PLDI 2022</a>
+        • <a href="http://www.jos.org.cn/jos/home">Journal Of Software</a><a href="http://www.jos.org.cn/jos/news/view/20231116114042001"> Acks</a>
+        • <a href="http://chinasoft.ccf.org.cn/">ChinaSoft 2021</a>
+    </pre>
+
+    <pre><b>※ </b>Teaching Assistant:  
+        • <strong><em>Advanced Programming in C++</em></strong> in Semester 1, 2020/2021
+        • <strong><em>Advanced Programming in C++</em></strong> in Semester 1, 2019/2020
+    </pre>
+
 
 
 
@@ -329,13 +307,9 @@
     </p>
 
     <hr>
-    <h1 style="color:darkblue">Personal Interests </h1>
-    <p>
-    Running, Pingpong, Swimming, Basketball, Movies.
-    </p>
 
     <p>
-        Last updated at Feb/28/2024.
+        Last updated at Apr/19/2024.
     </p>
     <table class="MsoNormalTable" border="0" cellpadding="0"
 		width="100%"
