--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         • <a href="https://conf.researchr.org/track/ase-2023/ase-2023-papers/">ASE 2023</a>
         • <a href="https://2022.esec-fse.org/">ESEC/FSE 2022</a>
         • <a href="https://pldi22.sigplan.org/">PLDI 2022</a>
-        • <a href="http://www.jos.org.cn/jos/home">Journal Of Software</a><a href="http://www.jos.org.cn/jos/news/view/20231116114042001"> Acks</a>
+        • <a href="http://www.jos.org.cn/jos/home">Journal Of Software</a><!--<a href="http://www.jos.org.cn/jos/news/view/20231116114042001"> Acks</a>--->
         • <a href="http://chinasoft.ccf.org.cn/">ChinaSoft 2021</a>
     </pre>
 
