--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
 
     <hr>
     <h1 style="color:darkblue">Services </h1>
-    <pre><b>※ </b>Program Committee:
+    <pre><span style="font-family:Times New Roman"><b>※ </b>Program Committee:
         • <a href="https://pldi24.sigplan.org/">PLDI 2024</a> Artifact Evaluation Committee (<a href="https://pldi24.sigplan.org/committee/pldi-2024-pldi-research-artifacts-artifact-evaluation-committee">AEC</a>)
         • <a href="https://conf.researchr.org/home/issta-2022">ISSTA 2022</a> Artifact Evaluation Committee (<a href="https://conf.researchr.org/committee/issta-2022/issta-2022-artifact-evaluation-artifact-evaluation-committee">AEC</a>)
-    </pre>
-    <pre><b>※ </b>Reviewer:  
+    </span></pre>
+    <pre><span style="font-family:Times New Roman"><b>※ </b>Reviewer:  
         • <a href="https://2024.splashcon.org/track/splash-2024-oopsla/">OOPSLA 2024</a>
         • <a href="https://conf.researchr.org/track/icse-2024/icse-2024-SRC/">ICSE 2024 SRC</a>
         • <a href="https://pldi24.sigplan.org/track/pldi-2024-papers/">PLDI 2024</a>
@@ -257,12 +257,11 @@
         • <a href="https://pldi22.sigplan.org/">PLDI 2022</a>
         • <a href="http://www.jos.org.cn/jos/home">Journal Of Software</a><!--<a href="http://www.jos.org.cn/jos/news/view/20231116114042001"> Acks</a>--->
         • <a href="http://chinasoft.ccf.org.cn/">ChinaSoft 2021</a>
-    </pre>
-
-    <pre><b>※ </b>Teaching Assistant:  
+    </span></pre>
+    <pre><span style="font-family:Times New Roman"><b>※ </b>Teaching Assistant:  
         • <strong><em>Advanced Programming in C++</em></strong> in Semester 1, 2020/2021
         • <strong><em>Advanced Programming in C++</em></strong> in Semester 1, 2019/2020
-    </pre>
+    </span></pre>
 
 
 
