--- a/index.html
+++ b/index.html
@@ -120,18 +120,18 @@
     
     <p class="MsoNormal"><span style="font-size:15px"><span style="font-family:Times New Roman">
     <b>▶ Scaling Inter-procedural Dataflow Analysis on the Cloud</b>  
-    <br> Zewen Sun, Yujin Zhang, Duanchen Xu, <u><b>Yiyu Zhang</b></u>, Yun Qi, Yueyang Wang, Yi Li, Zhaokang Wang, Yue Li, Xuandong Li, Zhiqiang Zuo, Qingda Lu, Wenwen Peng, and Shengjian Guo
+    <br> By Zewen Sun, Yujin Zhang, Duanchen Xu, <u><b>Yiyu Zhang</b></u>, Yun Qi, Yueyang Wang, Yi Li, Zhaokang Wang, Yue Li, Xuandong Li, Zhiqiang Zuo, Qingda Lu, Wenwen Peng, and Shengjian Guo
     [<a href="https://arxiv.org/abs/2412.12579">arXiv</a>]</span></span></p>
 
     <p class="MsoNormal"><span style="font-size:15px"><span style="font-family:Times New Roman">
     <b>▶ HardRace: A Dynamic Data Race Monitor for Production Use</b>  
-    <br> Xudong Sun, Zhuo Chen, Jingyang Shi, <u><b>Yiyu Zhang</b></u>, Peng Di, Jianhua Zhao, Xuandong Li, and Zhiqiang Zuo
+    <br> By Xudong Sun, Zhuo Chen, Jingyang Shi, <u><b>Yiyu Zhang</b></u>, Peng Di, Jianhua Zhao, Xuandong Li, and Zhiqiang Zuo
     [<a href="https://arxiv.org/abs/2410.18412">arXiv</a>]</span></span></p>
 
     <p class="MsoNormal"><span style="font-size:15px"><span style="font-family:Times New Roman">
     <b>▶ HardTaint: Production-Run Dynamic Taint Analysis via Selective Hardware Tracing</b>  
     <br> By <u><b>Yiyu Zhang</b></u>, Tianyi Liu, Yueyang Wang, Yun Qi, Kai Ji, Jian Tang, Xiaoliang Wang, Xuandong Li, and Zhiqiang Zuo
-    <br> conditionally accepted by the ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications (<font color="#ff0000"><strong>OOPSLA'24</strong></font>), 2024.
+    <br> In Proceedings of ACM Programming Languages, 8, OOPSLA2, Article 328 (October 2024). (<font color="#ff0000"><strong>OOPSLA'24</strong></font>)
     [<a href="https://dl.acm.org/doi/pdf/10.1145/3689768">PDF</a>]</span></span></p>
          
 
