--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
     <p style="color:darkblue"><img src="./files/new.png" height="15" style="vertical-align:top">
         06/2024 Our HardTaint paper was conditionally accepted to <a href="https://2024.splashcon.org/track/splash-2024-oopsla">OOPSLA'24</a>(CCF-A).</p>
   
-    <p style="color:darkblue"><img src="./files/new.png" height="15" style="vertical-align:top">
+    <p style="color:darkblue">
         01/2024 Invited to serve on the artifact evaluation committee (AEC) of the 45th ACM SIGPLAN Conference on Programming Language Design and Implementation (<a href="https://pldi24.sigplan.org/">PLDI'24</a>)!</p>
 
-    <p style="color:darkblue"><img src="./files/new.png" height="15" style="vertical-align:top">
+    <p style="color:darkblue">
         08/2023 Invited to serve on the program committee (PC) of the <a href="http://chinasoft.ccf.org.cn/">ChinaSoft'23</a>!</p>
     
 
-    <p style="color:darkblue"><img src="./files/new.png" height="15" style="vertical-align:top">
+    <p style="color:darkblue">
         07/2023 Our BigDataflow paper was accepted to <a href="https://2023.esec-fse.org/track/fse-2023-research-papers">FSE'23</a> (CCF-A).</p>
 
-    <p style="color:darkblue"><img src="./files/new.png" height="15" style="vertical-align:top">
+    <p style="color:darkblue">
         05/2023 Our Catamaran paper was accepted to <a href="https://conf.researchr.org/home/issta-2023">ISSTA'23</a> (CCF-A).</p>
 
     <p style="color:darkblue">
