--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
     <b>▶ TailTracer: Continuous Tail Tracing for Production Use</b>  
     <br> By Tianyi Liu, Yi Li, <u><b>Yiyu Zhang</b></u>, Zhuangda Wang, Rongxin Wu, Xuandong Li, and Zhiqiang Zuo
     <br> In Proceedings of ACM Programming Languages, OOPSLA. (<font color="#ff0000"><strong>OOPSLA'25</strong></font>)
-    [<a href="https://zyy0721.github.io/">PDF</a>]</span></span></p>
+    [<a href="https://dl.acm.org/doi/10.1145/3763109">PDF</a>]</span></span></p>
 
     <p class="MsoNormal"><span style="font-size:15px"><span style="font-family:Times New Roman">
     <b>▶ HybridPersist: A Compiler Support for User-Friendly and Efficient PM Programming</b>  
     <br> By <u><b>Yiyu Zhang</b></u>, Yongzhi Wang, Yanfeng Gao, Xuandong Li, and Zhiqiang Zuo
     <br> In Proceedings of ACM Programming Languages, OOPSLA. (<font color="#ff0000"><strong>OOPSLA'25</strong></font>)
-    [<a href="https://zyy0721.github.io/">PDF</a>]</span></span></p>
+    [<a href="https://dl.acm.org/doi/10.1145/3763089">PDF</a>]</span></span></p>
 
     <p class="MsoNormal"><span style="font-size:15px"><span style="font-family:Times New Roman">
     <b>▶ Scaling Inter-procedural Dataflow Analysis on the Cloud</b>  
@@ -345,7 +345,7 @@
     <hr>
 
     <p>
-        Last updated at Aug/13/2025.
+        Last updated at Oct/11/2025.
     </p>
     <table class="MsoNormalTable" border="0" cellpadding="0"
 		width="100%"
